fix: add general conditions hrid to plan for automation API